--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Hello there\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "npx nodemon node index.js"
   },
   "keywords": [],
   "author": "",
