--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,9 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "formik": "^2.4.6",
     "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
@@ -54,10 +56,12 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
     "sonner": "^1.7.2",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "yarn": "^1.22.22",
+    "yup": "^1.6.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
